checkPersistentDisks via Task Queues